<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cli_teleop</name>
  <version>0.0.0</version>
  <description>Programming a Command Line Interface for complete teleoperation of Turtlebot3 with OMX Arm</description>
  <maintainer email="yzb2@txstate.edu">yzb2</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>open_manipulator_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
